[JuniperOeX-140] adding a translation "Markdown syntax is allowed. " and "See the cheatsheet for help. "

--- a/conf/locale/de_DE/LC_MESSAGES/django.po
+++ b/conf/locale/de_DE/LC_MESSAGES/django.po
@@ -6371,6 +6371,14 @@ msgstr ""
 "Die Markdown Syntax ist erlaubt. Siehe %(start_link)sCheatsheet%(end_link)s "
 "für Hilfe."
 
+#: lms/templates/wiki/includes/editor_widget.html
+msgid "Markdown syntax is allowed. "
+msgstr "Die Markdown Syntax ist erlaubt. "
+
+#: lms/templates/wiki/includes/editor_widget.html
+msgid "See the cheatsheet for help."
+msgstr "Siehe Cheatsheet für Hilfe."
+
 #: lms/templates/wiki/plugins/attachments/index.html
 #: wiki/plugins/attachments/templates/wiki/plugins/attachments/index.html
 #: wiki/plugins/attachments/wiki_plugin.py
