--- a/conf/locale/es_419/LC_MESSAGES/django.po
+++ b/conf/locale/es_419/LC_MESSAGES/django.po
@@ -6702,6 +6702,14 @@ msgstr ""
 "Se permite la sintaxis de marcadores Markdown. Vea el %(start_link)sresumen "
 "de wiki%(end_link)s para más información."
 
+#: lms/templates/wiki/includes/editor_widget.html
+msgid "Markdown syntax is allowed. "
+msgstr "Se permite la sintaxis de marcadores Markdown. "
+
+#: lms/templates/wiki/includes/editor_widget.html
+msgid "See the cheatsheet for help."
+msgstr "Vea el resumen de wiki para más información."
+
 #: lms/templates/wiki/plugins/attachments/index.html
 #: wiki/plugins/attachments/templates/wiki/plugins/attachments/index.html
 #: wiki/plugins/attachments/wiki_plugin.py
